8229437: assert(is_aligned(ref, HeapWordSize)) failed: invariant

Reviewed-by: egahlin